--- a/HalloAppClip/es.lproj/Localizable.strings
+++ b/HalloAppClip/es.lproj/Localizable.strings
@@ -10,6 +10,9 @@
 /* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Cancelar";
 
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "CANCELAR";
+
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Continuar";
 
@@ -69,6 +72,9 @@
 
 /* Title of update notice shown to users who have old versions of the app */
 "home.update.notice.title" = "Esta versión está desactualizada";
+
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "Búsqueda";
 
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "Más información";
