--- a/Notification Service Extension/ru.lproj/Localizable.strings
+++ b/Notification Service Extension/ru.lproj/Localizable.strings
@@ -4,8 +4,14 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Проверьте, есть ли у вас интернет-подключение, и повторите попытку.";
 
+/* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
+"button.add" = "Добавить";
+
 /* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Отменить";
+
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "ОТМЕНА";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Продолжить";
@@ -58,6 +64,9 @@
 /* Text shown in notification when the user is added to a new group */
 "groups.add.notification" = "Тебя добавили в новую группу";
 
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "Поиск";
+
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "Подробнее";
 
@@ -82,6 +91,12 @@
 /* New post notification text when post is multiple videos without caption. */
 "notification.n.videos" = "notification.n.videos";
 
+/* Title for the new comment notification. */
+"notification.new.comment" = "Новый комментарий";
+
+/* Content for contact notification. */
+"notification.new.contact.content" = "%@ теперь в HalloApp";
+
 /* Content for friend notification. */
 "notification.new.friend.content" = "%@ сейчас в HalloApp";
 
@@ -96,6 +111,9 @@
 
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 видео";
+
+/* New post notification text when post is a voice note. */
+"notification.voicenote" = "🎤 Голосовая заметка";
 
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Неизвестный контакт";
