--- a/Share Extension/es.lproj/Localizable.strings
+++ b/Share Extension/es.lproj/Localizable.strings
@@ -10,6 +10,9 @@
 /* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Cancelar";
 
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "CANCELAR";
+
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Continuar";
 
@@ -58,6 +61,9 @@
 /* Title for generic delete button. */
 "Delete" = "Eliminar";
 
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "Búsqueda";
+
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "Más información";
 
@@ -85,6 +91,9 @@
 /* Composer title when sharing to feed */
 "share.composer.title.feed" = "Publicación nueva";
 
+/* Alert dialog message shown when uploading fails. */
+"share.composer.uploading.fail.message" = "Por favor, inteńtalo de nuevo más tarde.";
+
 /* Alert dialog title shown when uploading fails. */
 "share.composer.uploading.fail.title" = "Error al cargar";
 
@@ -104,7 +113,7 @@
 "share.destination.title" = "HalloApp";
 
 /* Message of alert when user is not logged in */
-"share.notlogged.message" = "Abre HalloApp e inicia la sesión.";
+"share.notlogged.message" = "Por favor, abre HalloApp e inicia la sesión.";
 
 /* Title of alert when user is not logged in */
 "share.notlogged.title" = "No has iniciado sesión";
